# gangware

./: .aipolicy.yml  .editorconfig  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  ENHANCED_DETECTION_README.md  LICENSE  README.md  build.bat  build_system.py  debug_ark_window.py  gangware.spec  main.py  mypy.ini  pyproject.toml  pyrightconfig.json  requirements.txt  run.bat  run.sh  setup.py  test_ark_window_constraint.py  test_comprehensive.py  test_enhanced_server_detection.py  test_improved_ark_detection.py  visualize_mask.py
.github/workflows/: ci.yml
_backup_local_edits_20250821_120118/src/gangware/features/: auto_sim.py
blueprint.md/: blueprint.md
config/: config.ini
controllers/: controls.py  vision.py
core/: config.py  hotkey_manager.py  state.py  worker.py
docs/: CONFIGURATION.md  CONTRIBUTING-COMMENTS.md  RUNBOOK.md  SECURITY.md  TESTING.md  autosim-comprehensive.md  autosim-success-detection-fix.md  blueprint.md
docs/ADRs/: ADR-0005-auto-sim-package-consolidation.md  ADR-0005-controllers-elimination.md  ADR-0006-mypy-daemon-type-architecture.md  ADR-0007-tek-punch-gate-simplification.md  ADR-0008-jetpack-preservation-fix.md  README.md
docs/adr/: ADR-0009-package-by-feature-structure.md  ADR-0010-autosim-detection-and-state-model.md  ADR-0011-autosim-retry-logic-fix.md
docs/guides/: enhanced_server_detection.md
gui/: overlay.py
macros/: armor_swapper.py  combat.py
src/gangware/: __init__.py  main.py
src/gangware/config/: __init__.py  vision.py
src/gangware/controllers/: armor_matcher.py  controls.py  vision.py
src/gangware/core/: __init__.py  calibration.py  config.py  health.py  hotkey_manager.py  hotkey_utils.py  hotkeys.py  logging_setup.py  resolution_monitor.py  system_service.py  task_management.py  worker.py
src/gangware/core/hotkeys/: hook.py
src/gangware/core/roi/: service.py
src/gangware/core/win32/: utils.py
src/gangware/features/: auto_sim.py
src/gangware/features/autosim/: __init__.py  automation.py  loader.py  menu_watch.py
src/gangware/features/combat/: __init__.py  armor_equipment.py  armor_matcher.py  medbrew_hot.py  search_service.py  task_factory.py  tek_dash.py
src/gangware/features/combat/macros/: __init__.py  armor_swapper.py  combat.py
src/gangware/features/debug/: __init__.py  calibration_service.py  keys.py  pixels.py  template.py
src/gangware/features/search/: search_service.py
src/gangware/gui/: build_theme.py  design_tokens.py  overlay.py  theme.qss  theme.qss.j2
src/gangware/io/: __init__.py  controls.py  win.py
src/gangware/macros/: combat.py
src/gangware/vision/: __init__.py  controller.py  detectors.py  matcher.py  menu_detector.py  preprocess.py
tests/: conftest.py  test_hotkey_f11.py  test_smoke.py  test_style_guard.py
tools/: normalize_py_eof.py  normalize_whitespace.py
tools/dev/: patch_enhanced_detection.py
tools/scripts/: auto_anchors.py  detect_menu_live.py  detect_menu_once.py  main.py  print_logs.py  run.bat  run.sh  run_admin.bat  set_menu_thresholds.py  test_autosim_logging.py  test_connection_failed.py
