[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gangware"
version = "0.1.0"
description = "Gangware Application"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PyQt6",
    "opencv-python",
    "numpy",
    "mss",
    "pydirectinput",
    "pytest",
]

[project.scripts]
gangware = "gangware.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 120
