[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gangware"
version = "0.1.0"
description = "Gangware Application"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PyQt6",
    "opencv-python",
    "numpy",
    "mss",
    "pydirectinput",
    "pytest",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.0.0",
    "types-requests",
    "black",
    "flake8",
    "pytest-cov",
]

[project.scripts]
gangware = "gangware.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 120

[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = [
  ".git",
  "__pycache__",
  ".venv",
  "venv",
  "build",
  "dist",
  ".mypy_cache",
  ".pytest_cache",
]

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E203", "W503", "W504"]

[tool.mypy]
python_version = "3.13"
warn_unused_ignores = true
warn_redundant_casts = true
check_untyped_defs = true
show_error_codes = true
warn_return_any = false
disallow_any_generics = false
disallow_any_expr = false

[[tool.mypy.overrides]]
module = [
    "mss.*",
    "cv2.*",
    "numpy.*",
    "PyQt6.*",
    "pydirectinput.*",
    "pyperclip.*",
    "pytesseract.*",
    "PIL.*",
    "pytest.*",
    "*.armor_matcher",
    "*.template"
]
ignore_missing_imports = true
warn_unreachable = false
disallow_untyped_defs = false
no_implicit_optional = true
strict_equality = false

[tool.pytest.ini_options]
addopts = "-ra -q --maxfail=1 --disable-warnings"
